--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,25 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 input {
-  width: 95%;
-  height: 200px;
-  font-size: 80px;
+  width: 90%;
+  height: 100px;
+  font-size: 50px;
 }
 
 .flexbox {
   display: flex;
+  flex-direction: row;
   margin-top: 50px;
+  text-align: center;
+}
+.yrlyRate {
+  margin-bottom: 100px;
 }
 
 .payment-history {
-  width: 50%;
+  width: 100%;
   height: 100%;
-  min-height: 800px;
+  min-height: 50vh;
   border: 1px solid white;
-  margin-left: 200px;
+  margin-left: 0;
   text-align: center;
 
 }
@@ -56,10 +31,11 @@ input {
 }
 
 .increment-years {
-  width: 50rem;
-  height: 10rem;
-  box-shadow: 0 0 20px rgb(73, 73, 73);
+  width: 90%;
+  height: 100px;
   font-size: 30px;
+  box-shadow: 0 0 20px rgb(73, 73, 73);
+  
   border: 5px solid aqua;
 }
 
@@ -68,12 +44,13 @@ input {
   width: 95vw;
 }
 
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width: 1100px) {
+  .flexbox {
+    display: flex;
+    flex-direction: column;
 }
+.payment-history {
+  margin-bottom: 200px;
+}
+}
+
