--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
+div {
+  font-size: 1rem;
+  margin-right: 15px;
+  margin-bottom: 20px;
+}
+
+div.title {
+  margin-bottom: 20px;
+  color: rgb(0, 242, 250);
+}
+
+label {font-size: 1.1rem;}
+
 input {
-  width: 90%;
-  height: 100px;
-  font-size: 50px;
-}
-
-.flexbox {
-  display: flex;
-  flex-direction: row;
-  margin-top: 50px;
-  text-align: center;
-}
-.yrlyRate {
-  margin-bottom: 100px;
-}
-
-.payment-history {
   width: 100%;
-  height: 100%;
-  min-height: 50vh;
-  border: 1px solid white;
-  margin-left: 0;
-  text-align: center;
-
+  margin-top: 0px;
+  height: 20px;
+  font-size: 1rem;
+  background: none;
+  border: none;
+  border-bottom: 3px solid rgb(0, 242, 250);
+  color: rgb(0, 242, 250);
 }
 
-.principal {margin-bottom: 100px;}
-.ul {
-  text-align: left;
-  margin-left: 50px;
+button {
+  width: 75%;
+  height: 50px;
+  border-radius: 20px;
+  border: 2px solid #282c34;
+  font-size: 1.2rem;
 }
 
-.increment-years {
-  width: 90%;
-  height: 100px;
-  font-size: 30px;
-  box-shadow: 0 0 20px rgb(73, 73, 73);
-  
-  border: 5px solid aqua;
+button:hover {
+  border: 2px solid rgb(0, 242, 250);
+  background-color: #282c34;
+  color:rgb(0, 242, 250);
+  cursor: pointer;
+  transition: 1s;
+  box-shadow: 0 5px 20px 5px rgb(0, 242, 250);
 }
 
 .container {
@@ -44,13 +44,58 @@ input {
   width: 95vw;
 }
 
-@media (max-width: 1100px) {
-  .flexbox {
-    display: flex;
-    flex-direction: column;
-}
-.payment-history {
-  margin-bottom: 200px;
-}
+.title, .center, .button {text-align: center;}
+
+.title h1 {font-size: 2rem;}
+
+.title h3 {
+ font-size: 1.3rem;
+ color: rgb(0, 242, 250);
+ margin-bottom: 0px;
 }
 
+.title h5 {
+  font-size: .7rem;
+  margin-bottom: 30px;
+}
+
+.grid {
+  display: grid;
+  margin: 20px auto;
+  width:720px;
+  height:700px;
+  background-color:transparent;
+  grid-template-columns: 350px 350px;
+  grid-row: auto auto;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.box {
+  border: 1px solid black;
+  color: white;
+  background-color:#333;
+  padding:20px;
+  border-radius:10px;
+  align-items:center;
+  justify-content:center;
+  font-size:40px;
+  font-family:sans-serif;
+}
+
+.flexbox {display: flex;}
+.space-between {justify-content:  space-between;}
+
+.minimum-payment, .minimum-payments {
+  margin-top: 30%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.payment-history {
+  text-align: center;
+  overflow: auto;
+}
+
+.payment-history-text {font-size: 1rem;}
